[package]
name = "threshold-crypto"
version = "0.1.0"
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
rug = { version = "1.13.0" , default-features = false, features = ["integer", "rand", "serde"]}
glass_pumpkin = "1.1.0"
rand = "0.8.4"
serde = "1.0.129"

[profile.dev.package.glass_pumpkin]
opt-level = 3