[package]
name = "pht-crypto"
version = "0.1.0-alpha"
edition = "2018"
resolver = "2"
authors = ["Robin Hundt <robin-codes@posteo.de>"]
description = "Threshold homomorphic encryption, currently threshold paillier"
repository = "https://github.com/robinhundt/threshold-crypto"
license = "LGPL-3.0+"
categories = ["cryptography"]
keywords = ["paillier", "threshold-paillier", "homomorphic"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
rug = { version = "1.13.0" , default-features = false, features = ["integer", "rand", "serde"]}
rand = "0.8.4"
serde = { version = "1.0.129" , features = ["derive"]}
openssl = "0.10.36"

[profile.dev.package.openssl]
opt-level = 3

[dev-dependencies]
criterion = "0.3.5"
bincode = "1.3.3"

[[bench]]
name = "paillier"
harness = false